情報の更新

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="detail-item">
                         <span class="detail-label">⏰ Time</span>
-                        <span class="detail-value">両日 15:30〜21:00</span>
+                        <span class="detail-value">両日 15:50〜21:00（開場15:30）</span>
                     </div>
                     <div class="detail-item">
                         <span class="detail-label">🏢 Place</span>
@@ -52,21 +52,6 @@
                 <h2 class="headliner-title">HEAD LINER</h2>
                 <div class="headliner-band">
                     <h3 class="headliner-band-name">Lack of Sleep</h3>
-                    <div class="headliner-songs">
-                        <div class="headliner-song">ジターバグ</div>
-                        <div class="headliner-song">スターフィッシュ</div>
-                        <div class="headliner-song">Missing</div>
-                        <div class="headliner-song">リライト</div>
-                        <div class="headliner-song">my first kiss</div>
-                        <div class="headliner-song">surfrider association</div>
-                        <div class="headliner-song">小さな恋のうた</div>
-                        <div class="headliner-song">あなたに</div>
-                        <div class="headliner-song">Funny Bunny</div>
-                        <div class="headliner-song">CHA-LA HEAD-CHA-LA</div>
-                        <div class="headliner-song">melodic storm</div>
-                        <div class="headliner-song">前前前世</div>
-                        <div class="headliner-song">雨上がりの夜空に</div>
-                    </div>
                 </div>
             </aside>
 
@@ -83,12 +68,12 @@
                                 <div class="time-slot">16:20</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ダミー楽曲1</div>
-                                <div class="song-compact">ダミー楽曲2</div>
-                                <div class="song-compact">ダミー楽曲3</div>
-                                <div class="song-compact">ダミー楽曲4</div>
-                                <div class="song-compact">ダミー楽曲5</div>
-                                <div class="song-compact">ダミー楽曲6</div>
+                                <div class="song-compact">旅立ちの日に</div>
+                                <div class="song-compact">ウィーアー!</div>
+                                <div class="song-compact">大切なもの</div>
+                                <div class="song-compact">SHAKE</div>
+                                <div class="song-compact">青と夏</div>
+                                <div class="song-compact">Livin' on a Prayer</div>
                             </div>
                         </div>
 
@@ -98,12 +83,12 @@
                                 <div class="time-slot">17:00</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ダミー楽曲1</div>
-                                <div class="song-compact">ダミー楽曲2</div>
-                                <div class="song-compact">ダミー楽曲3</div>
-                                <div class="song-compact">ダミー楽曲4</div>
-                                <div class="song-compact">ダミー楽曲5</div>
-                                <div class="song-compact">ダミー楽曲6</div>
+                                <div class="song-compact">The Beginning</div>
+                                <div class="song-compact">Salamander</div>
+                                <div class="song-compact">super stomper</div>
+                                <div class="song-compact">Re:make</div>
+                                <div class="song-compact">Fire Cracker</div>
+                                <div class="song-compact">Smells Like Teen Spirit</div>
                             </div>
                         </div>
 
@@ -113,12 +98,12 @@
                                 <div class="time-slot">17:40</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ダミー楽曲1</div>
-                                <div class="song-compact">ダミー楽曲2</div>
-                                <div class="song-compact">ダミー楽曲3</div>
-                                <div class="song-compact">ダミー楽曲4</div>
-                                <div class="song-compact">ダミー楽曲5</div>
-                                <div class="song-compact">ダミー楽曲6</div>
+                                <div class="song-compact">ロッキンポ殺し</div>
+                                <div class="song-compact">ロック番狂わせ</div>
+                                <div class="song-compact">F</div>
+                                <div class="song-compact">爪爪爪</div>
+                                <div class="song-compact">シミ</div>
+                                <div class="song-compact">恋のメガラバ</div>
                             </div>
                         </div>
 
@@ -128,11 +113,11 @@
                                 <div class="time-slot">18:20</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ダミー楽曲1</div>
-                                <div class="song-compact">ダミー楽曲2</div>
-                                <div class="song-compact">ダミー楽曲3</div>
-                                <div class="song-compact">ダミー楽曲4</div>
-                                <div class="song-compact">ダミー楽曲5</div>
+                                <div class="song-compact">浮舟</div>
+                                <div class="song-compact">ワタリドリ</div>
+                                <div class="song-compact">誘惑</div>
+                                <div class="song-compact">真夜中遊園地</div>
+                                <div class="song-compact">車輪の唄</div>
                             </div>
                         </div>
 
@@ -142,12 +127,12 @@
                                 <div class="time-slot">19:00</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ダミー楽曲1</div>
-                                <div class="song-compact">ダミー楽曲2</div>
-                                <div class="song-compact">ダミー楽曲3</div>
-                                <div class="song-compact">ダミー楽曲4</div>
-                                <div class="song-compact">ダミー楽曲5</div>
-                                <div class="song-compact">ダミー楽曲6</div>
+                                <div class="song-compact">YOU GOTTA RUN</div>
+                                <div class="song-compact">C'est La Vie</div>
+                                <div class="song-compact">HONEY</div>
+                                <div class="song-compact">HEAVEN'S DRIVE</div>
+                                <div class="song-compact">Stay Away</div>
+                                <div class="song-compact">瞳の住人</div>
                             </div>
                         </div>
 
@@ -157,12 +142,25 @@
                                 <div class="time-slot">19:40</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ダミー楽曲1</div>
-                                <div class="song-compact">ダミー楽曲2</div>
-                                <div class="song-compact">ダミー楽曲3</div>
-                                <div class="song-compact">ダミー楽曲4</div>
-                                <div class="song-compact">ダミー楽曲5</div>
-                                <div class="song-compact">ダミー楽曲6</div>
+                                <div class="song-compact">Freedom</div>
+                                <div class="song-compact">ティーンエイジサンセット</div>
+                                <div class="song-compact">月並みに輝け</div>
+                                <div class="song-compact">修羅</div>
+                                <div class="song-compact">バクチダンサー</div>
+                                <div class="song-compact">拝啓、少年よ</div>
+                            </div>
+                        </div>
+
+                        <div class="program-item">
+                            <div class="program-header">
+                                <h3 class="band-name">大輝と達也</h3>
+                                <div class="time-slot">20:20</div>
+                            </div>
+                            <div class="songs-compact">
+                                <div class="song-compact">花</div>
+                                <div class="song-compact">キズナ</div>
+                                <div class="song-compact">リライト</div>
+                                <div class="song-compact">Supernova</div>
                             </div>
                         </div>
                     </div>
@@ -179,11 +177,11 @@
                                 <div class="time-slot">16:20</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ダミー楽曲1</div>
-                                <div class="song-compact">ダミー楽曲2</div>
-                                <div class="song-compact">ダミー楽曲3</div>
-                                <div class="song-compact">ダミー楽曲4</div>
-                                <div class="song-compact">ダミー楽曲5</div>
+                                <div class="song-compact">Driver's High</div>
+                                <div class="song-compact">Stay Away</div>
+                                <div class="song-compact">BLOWIN'</div>
+                                <div class="song-compact">ultra soul</div>
+                                <div class="song-compact">さよなら傷だらけの日々よ</div>
                             </div>
                         </div>
 
@@ -193,11 +191,11 @@
                                 <div class="time-slot">17:00</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ダミー楽曲1</div>
-                                <div class="song-compact">ダミー楽曲2</div>
-                                <div class="song-compact">ダミー楽曲3</div>
-                                <div class="song-compact">ダミー楽曲4</div>
-                                <div class="song-compact">ダミー楽曲5</div>
+                                <div class="song-compact">若者のすべて</div>
+                                <div class="song-compact">ループ&ループ</div>
+                                <div class="song-compact">オドループ</div>
+                                <div class="song-compact">切望</div>
+                                <div class="song-compact">終わりなき旅</div>
                             </div>
                         </div>
 
@@ -207,11 +205,11 @@
                                 <div class="time-slot">17:40</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ダミー楽曲1</div>
-                                <div class="song-compact">ダミー楽曲2</div>
-                                <div class="song-compact">ダミー楽曲3</div>
-                                <div class="song-compact">ダミー楽曲4</div>
-                                <div class="song-compact">ダミー楽曲5</div>
+                                <div class="song-compact">AM11:00</div>
+                                <div class="song-compact">世界でいちばん熱い夏</div>
+                                <div class="song-compact">花になって</div>
+                                <div class="song-compact">絆の奇跡</div>
+                                <div class="song-compact">私がオバさんになっても</div>
                             </div>
                         </div>
 
@@ -221,11 +219,10 @@
                                 <div class="time-slot">18:20</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ダミー楽曲1</div>
-                                <div class="song-compact">ダミー楽曲2</div>
-                                <div class="song-compact">ダミー楽曲3</div>
-                                <div class="song-compact">ダミー楽曲4</div>
-                                <div class="song-compact">ダミー楽曲5</div>
+                                <div class="song-compact">Paradise Has NO BORDER</div>
+                                <div class="song-compact">美しく燃える森 feat.奥田民生</div>
+                                <div class="song-compact">Love so sweet</div>
+                                <div class="song-compact">どんなときも</div>
                             </div>
                         </div>
 
@@ -235,24 +232,36 @@
                                 <div class="time-slot">19:00</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ダミー楽曲1</div>
-                                <div class="song-compact">ダミー楽曲2</div>
-                                <div class="song-compact">ダミー楽曲3</div>
-                                <div class="song-compact">ダミー楽曲4</div>
+                                <div class="song-compact">タイムパラドックス</div>
+                                <div class="song-compact">Don't say lazy</div>
+                                <div class="song-compact">GLAMOROUS SKY</div>
+                                <div class="song-compact">誘惑</div>
+                                <div class="song-compact">GOD KNOWS...</div>
+                                <div class="song-compact">CHAINSAW BLOOD</div>
                             </div>
                         </div>
 
                         <div class="program-item">
                             <div class="program-header">
-                                <h3 class="band-name">未定</h3>
+                                <h3 class="band-name">倅</h3>
                                 <div class="time-slot">19:40</div>
                             </div>
                             <div class="songs-compact">
-                                <div class="song-compact">ダミー楽曲1</div>
-                                <div class="song-compact">ダミー楽曲2</div>
-                                <div class="song-compact">ダミー楽曲3</div>
-                                <div class="song-compact">ダミー楽曲4</div>
-                                <div class="song-compact">ダミー楽曲5</div>
+                                <div class="song-compact">?</div>
+                                <div class="song-compact">?</div>
+                                <div class="song-compact">?</div>
+                            </div>
+                        </div>
+
+                        <div class="program-item">
+                            <div class="program-header">
+                                <h3 class="band-name">チャンイシイの90年代同好会</h3>
+                                <div class="time-slot">20:20</div>
+                            </div>
+                            <div class="songs-compact">
+                                <div class="song-compact">渋谷で5時</div>
+                                <div class="song-compact">世界中の誰よりきっと</div>
+                                <div class="song-compact">丸の内サディスティック</div>
                             </div>
                         </div>
                     </div>
@@ -266,7 +275,7 @@
                     <h3 class="info-card-title">イベント統計</h3>
                     <div class="stats-grid">
                         <div class="stat-item">
-                            <span class="stat-number">12</span>
+                            <span class="stat-number">14</span>
                             <span class="stat-label">出演バンド</span>
                         </div>
                         <div class="stat-item">
@@ -274,11 +283,11 @@
                             <span class="stat-label">開催日数</span>
                         </div>
                         <div class="stat-item">
-                            <span class="stat-number">8.0</span>
+                            <span class="stat-number">10</span>
                             <span class="stat-label">総公演時間</span>
                         </div>
                         <div class="stat-item">
-                            <span class="stat-number">77</span>
+                            <span class="stat-number">70</span>
                             <span class="stat-label">演奏楽曲</span>
                         </div>
                     </div>
