画像サイズ、表記修正

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
                         <span class="detail-value">9月29日(月)・30日(火)</span>
                     </div>
                     <div class="detail-item">
-                        <span class="detail-label">⏰ Time</span>
-                        <span class="detail-value">両日 15:50〜21:00（開場15:30）</span>
+                        <span class="detail-label">🚪 Open</span>
+                        <span class="detail-value">15:30</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="detail-label">⏰ Show Time</span>
+                        <span class="detail-value">15:50〜21:00</span>
                     </div>
                     <div class="detail-item">
                         <span class="detail-label">🏢 Place</span>
@@ -37,10 +41,7 @@
                     </div>
                     <div class="detail-item">
                         <span class="detail-label">💰 Price</span>
-                        <span class="detail-value">1,000円（1ドリンク付）</span>
-                    </div>
-                    <div class="free-notice">
-                        ✨ 高校生以下無料 ✨
+                        <span class="detail-value">1,000円（1ドリンク付）<br>高校生以下無料</span>
                     </div>
                 </div>
             </div>
