フォントサイズの変更

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                 <div class="program-header">
                                     <img src="images/logo/band-11.gif" alt="船橋スカパラダイスオーケストラ ロゴ" class="band-logo">
                                     <div class="band-info">
-                                        <h3 class="band-name">船橋スカパラダイスオーケストラ</h3>
+                                        <h3 class="band-name fs-08">船橋スカパラダイスオーケストラ</h3>
                                     </div>
                                 </div>
                                 <div class="songs-compact">
