画像拡大機能の実装

--- a/index.html
+++ b/index.html
@@ -366,6 +366,11 @@
             </aside>
         </main>
 
+        <!-- 画像拡大モーダル -->
+        <div id="imageModal" class="image-modal">
+            <img id="modalImage" class="modal-image" src="" alt="">
+        </div>
+
         <footer class="footer-grid">
             <div class="footer-content">
                 <div class="credits">
