ヘッダー画像のスライドショー機能

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
         <header class="main-header">
             <div class="header-content">
                 <h1 class="event-title">Lack of Sleepと<br>寝不足にならNight 10</h1>
-                <img src="image/header.jpeg" alt="LOSと寝不足にならNight 10 イメージ画像" class="header-image">
+                <div class="slideshow">
+                    <div class="slides">
+                        <img src="images/header/header1.png" alt="LOSと寝不足にならNight 10 イメージ画像 1" class="header-image">
+                        <img src="images/header/header2.png" alt="LOSと寝不足にならNight 10 イメージ画像 2" class="header-image">
+                    </div>
+                    <div class="dots">
+                        <span class="dot active"></span>
+                        <span class="dot"></span>
+                    </div>
+                </div>
 
                 <div class="event-details">
                     <div class="detail-item">
@@ -48,7 +57,7 @@
         </header>
 
         <main class="content-grid">
-            <!-- 左サイドバー: ヘッドライナーコンテンツ -->
+            <!-- 左サイドバー: ヘッドライナー -->
             <aside class="headliner-sidebar">
                 <h2 class="headliner-title">HEAD LINER</h2>
                 <div class="headliner-band">
@@ -341,6 +350,7 @@
 
             <!-- 右サイドバー: イベント統計 -->
             <aside class="info-sidebar">
+                <!-- イベント統計 -->
                 <div class="info-card sticky stats-container">
                     <h3 class="info-card-title">イベント統計</h3>
                     <div class="stats-grid">
@@ -370,7 +380,6 @@
             <img id="modalImage" class="modal-image" src="" alt="">
         </div>
 
-        <!-- フッター -->
         <footer class="footer-grid">
             <div class="footer-content">
                 <div class="credits">
