--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </header>
 
         <main class="content-grid">
-            <!-- 左サイドバー: ヘッドライナー -->
+            <!-- 左サイドバー: ヘッドライナーコンテンツ -->
             <aside class="headliner-sidebar">
                 <h2 class="headliner-title">HEAD LINER</h2>
                 <div class="headliner-band">
@@ -350,7 +350,6 @@
 
             <!-- 右サイドバー: イベント統計 -->
             <aside class="info-sidebar">
-                <!-- イベント統計 -->
                 <div class="info-card sticky stats-container">
                     <h3 class="info-card-title">イベント統計</h3>
                     <div class="stats-grid">
