ヘッダー画像の初期表示

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1 class="event-title">Lack of Sleepと<br>寝不足にならNight 10</h1>
                 <div class="slideshow">
                     <div class="slides">
-                        <img src="images/header/header1.png" alt="LOSと寝不足にならNight 10 イメージ画像 1" class="header-image">
+                        <img src="images/header/header1.png" alt="LOSと寝不足にならNight 10 イメージ画像 1" class="header-image active">
                         <img src="images/header/header2.png" alt="LOSと寝不足にならNight 10 イメージ画像 2" class="header-image">
                     </div>
                     <div class="dots">
