--- a/index.html
+++ b/index.html
@@ -71,7 +71,24 @@
                 <div class="day-container">
                     <h2 class="day-header">9月29日(月)</h2>
                     <div class="programs-list">
-
+                        <div class="program-item">
+                            <div class="time-slot">15:50</div>
+                            <div class="program-card">
+                                <div class="program-header">
+                                    <img src="images/logo/lack-of-sleep.gif" alt="LOSロゴ" class="band-logo">
+                                    <div class="band-info">
+                                        <h3 class="band-name">Lack of Sleep</h3>
+                                    </div>
+                                </div>
+                                <div class="songs-compact">
+                                    <div class="song-compact">楽曲1</div>
+                                    <div class="song-compact">楽曲2</div>
+                                    <div class="song-compact">楽曲3</div>
+                                    <div class="song-compact">楽曲4</div>
+                                    <div class="song-compact">楽曲5</div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="program-item">
                             <div class="time-slot">16:20</div>
                             <div class="program-card">
@@ -215,7 +232,24 @@
                 <div class="day-container">
                     <h2 class="day-header">9月30日(火)</h2>
                     <div class="programs-list">
-
+                        <div class="program-item">
+                            <div class="time-slot">15:50</div>
+                            <div class="program-card">
+                                <div class="program-header">
+                                    <img src="images/logo/lack-of-sleep.gif" alt="LOSロゴ画像" class="band-logo">
+                                    <div class="band-info">
+                                        <h3 class="band-name">Lack of Sleep</h3>
+                                    </div>
+                                </div>
+                                <div class="songs-compact">
+                                    <div class="song-compact">楽曲1</div>
+                                    <div class="song-compact">楽曲2</div>
+                                    <div class="song-compact">楽曲3</div>
+                                    <div class="song-compact">楽曲4</div>
+                                    <div class="song-compact">楽曲5</div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="program-item">
                             <div class="time-slot">16:20</div>
                             <div class="program-card">
