--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                                     </div>
                                 </div>
                                 <div class="songs-compact">
-                                    <div class="song-compact">楽曲1</div>
-                                    <div class="song-compact">楽曲2</div>
-                                    <div class="song-compact">楽曲3</div>
-                                    <div class="song-compact">楽曲4</div>
-                                    <div class="song-compact">楽曲5</div>
+                                    <div class="song-compact">?</div>
+                                    <div class="song-compact">?</div>
+                                    <div class="song-compact">?</div>
+                                    <div class="song-compact">?</div>
+                                    <div class="song-compact">?</div>
                                 </div>
                             </div>
                         </div>
@@ -242,11 +242,11 @@
                                     </div>
                                 </div>
                                 <div class="songs-compact">
-                                    <div class="song-compact">楽曲1</div>
-                                    <div class="song-compact">楽曲2</div>
-                                    <div class="song-compact">楽曲3</div>
-                                    <div class="song-compact">楽曲4</div>
-                                    <div class="song-compact">楽曲5</div>
+                                    <div class="song-compact">?</div>
+                                    <div class="song-compact">?</div>
+                                    <div class="song-compact">?</div>
+                                    <div class="song-compact">?</div>
+                                    <div class="song-compact">?</div>
                                 </div>
                             </div>
                         </div>
