LOSのロゴ画像を設定

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <div class="time-slot">15:50</div>
                             <div class="program-card">
                                 <div class="program-header">
-                                    <img src="images/logo/lack-of-sleep.gif" alt="LOSロゴ" class="band-logo">
+                                    <img src="images/logo/band-headliner.png" alt="LOSロゴ" class="band-logo">
                                     <div class="band-info">
                                         <h3 class="band-name">Lack of Sleep</h3>
                                     </div>
@@ -236,7 +236,7 @@
                             <div class="time-slot">15:50</div>
                             <div class="program-card">
                                 <div class="program-header">
-                                    <img src="images/logo/lack-of-sleep.gif" alt="LOSロゴ画像" class="band-logo">
+                                    <img src="images/logo/band-headliner.png" alt="LOSロゴ画像" class="band-logo">
                                     <div class="band-info">
                                         <h3 class="band-name">Lack of Sleep</h3>
                                     </div>
