Bootstrapの導入とナビゲーションメニューの実装

--- a/index.html
+++ b/index.html
@@ -16,6 +16,67 @@
     </head>
 
     <body>
+        <nav class="navbar fixed-top bg-body-tertiary">
+            <div class="container-fluid">
+                <div>LOSと寝不足にならNight10</div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end text-bg-dark w-75" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                    <div class="offcanvas-header">
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    9月29日プログラム
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">15:50</span>LACK OF SLEEP</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">16:20</span>あにまるはんたーず2ndG</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">17:00</span>博多山Z</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">17:40</span>川倉ヒロヨシとBLUE SKY</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">18:20</span>デジタル5チャンネル</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">19:00</span>P'INK-EN-CIEL</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">19:40</span>時計仕掛けのタヌキ</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">20:20</span>大輝と達也</span></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    9月30日プログラム
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">15:50</span>LACK OF SLEEP</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">16:20</span>DEVIL SOLDIERS</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">17:00</span>ホンキッキーズ</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">17:40</span>ふ〜た〜ず★</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">18:20</span>船橋スカパラダイスオーケストラ</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">19:00</span>浸食DΘLCE</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">19:40</span>倅</span></li>
+                                    <hr class="dropdown-divider">
+                                    <li><span class="dropdown-item-text"><span style="padding-right: 10px; color: blue; font-weight: bold;">20:20</span>チャンイシイの90年代同好会</span></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
         <header class="main-header">
             <div class="header-content">
                 <h1 class="event-title">Lack of Sleepと<br>寝不足にならNight 10</h1>
